Start using Chimney for DTO mapping
