# ideal-voting-server/src/main/scala/cz/idealiste/idealvoting/server/Http.scala
@@ -1,5 +1,6 @@
 package cz.idealiste.idealvoting.server
 
+import cats.data.ValidatedNec
 import cats.implicits._
 import cz.idealiste.idealvoting.contract
 import cz.idealiste.idealvoting.contract.definitions.LinksResponse.Links
@@ -9,6 +10,9 @@ import emil.MailAddress
 import emil.javamail.syntax._
 import io.circe.generic.semiauto.{deriveDecoder, deriveEncoder}
 import io.circe.{Decoder, Encoder}
+import io.scalaland.chimney.cats._
+import io.scalaland.chimney.dsl._
+import io.scalaland.chimney.{TransformationError, Transformer, TransformerF}
 import org.http4s._
 import org.http4s.circe.CirceEntityCodec._
 import org.http4s.dsl.Http4sDsl
@@ -27,31 +31,71 @@ class Http(voting: Voting, clock: Clock.Service)(implicit r: Runtime[Has[Blockin
     override def createElection(respond: contract.Resource.CreateElectionResponse.type)(
         body: contract.definitions.CreateElectionRequest,
         xCorrelationId: String,
-    ): Task[contract.Resource.CreateElectionResponse] = {
+    ): Task[contract.Resource.CreateElectionResponse] =
+      body.validateAs[CreateElection] match {
+        case Right(body) =>
+          for {
+            now <- clock.currentDateTime
+            (titleMangled, token) <- voting.createElection(body, now)
+            resp = contract.definitions.LinksResponse(
+              Vector(
+                Links(
+                  show"/api/v1/election/admin/$titleMangled/$token",
+                  "election-view-admin",
+                  Links.Method.Get,
+                  Vector(Links.Parameters("titleMangled", titleMangled), Links.Parameters("token", token)),
+                ),
+              ),
+            )
+          } yield respond.Created(resp)
+        case Left(value) =>
+          Task.succeed(respond.BadRequest(contract.definitions.BadRequestResponse(value)))
+      }
+
+    override def getElectionAdmin(
+        respond: contract.Resource.GetElectionAdminResponse.type,
+    )(titleMangled: String, token: String, xCorrelationId: String): Task[contract.Resource.GetElectionAdminResponse] =
       for {
-        admin <- Task(MailAddress.parseUnsafe(body.admin))
-        voters <- body.voters.traverse(voter => Task(MailAddress.parseUnsafe(voter)))
-        createElection = CreateElection(
-          body.title,
-          body.description,
-          admin,
-          body.options.map(req => CreateOption(req.title, req.description)).toList,
-          voters.toList,
-        )
-        now <- clock.currentDateTime
-        (titleMangled, token) <- voting.createElection(createElection, now)
-        resp = contract.definitions.LinksResponse(
-          Vector(
-            Links(
-              show"/api/v1/election/admin/$titleMangled/$token",
-              "election-view-admin",
-              Links.Method.Get,
-              Vector(Links.Parameters("titleMangled", titleMangled), Links.Parameters("token", token)),
+        electionViewAdmin <- voting.viewElectionAdmin(token)
+        resp = electionViewAdmin.map { electionViewAdmin =>
+          val titleMangled = electionViewAdmin.metadata.titleMangled
+          contract.definitions.GetElectionAdminResponse(
+            electionViewAdmin.metadata.title,
+            titleMangled,
+            electionViewAdmin.metadata.description,
+            electionViewAdmin.metadata.started,
+            electionViewAdmin.admin.email.transformInto,
+            electionViewAdmin.admin.token,
+            electionViewAdmin.options.map(_.transformInto[contract.definitions.GetOptionResponse]).toVector,
+            electionViewAdmin.voters.map(_.transformInto[contract.definitions.GetVoterResponse]).toVector,
+            electionViewAdmin.result.map(_.transformInto[contract.definitions.GetResultResponse]),
+            contract.definitions.LinksResponse(
+              Vector(
+                Links(
+                  show"/api/v1/election/admin/$titleMangled/$token",
+                  "self",
+                  Links.Method.Get,
+                  Vector(Links.Parameters("titleMangled", titleMangled), Links.Parameters("token", token)),
+                ),
+              ) ++ (
+                if (electionViewAdmin.result.isDefined) Vector()
+                else
+                  Vector(
+                    Links(
+                      show"/api/v1/election/admin/$titleMangled/$token",
+                      "election-end",
+                      Links.Method.Post,
+                      Vector(Links.Parameters("titleMangled", titleMangled), Links.Parameters("token", token)),
+                    ),
+                  )
+              ),
             ),
-          ),
-        )
-      } yield respond.Created(resp)
-    }
+          )
+        }
+      } yield resp match {
+        case Some(resp) => respond.Ok(resp)
+        case None       => respond.NotFound(contract.definitions.NotFoundResponse("Election not found."))
+      }
   }
 
   private val serviceV1 = {
@@ -233,6 +277,39 @@ class Http(voting: Voting, clock: Clock.Service)(implicit r: Runtime[Has[Blockin
 }
 
 object Http {
+
+  type Validation[+A] = ValidatedNec[TransformationError[String], A]
+
+  implicit class ValidationOps[A](private val self: A) extends AnyVal {
+    def validateAs[B](implicit ev: TransformerF[Validation[+*], A, B]): Either[String, B] =
+      self.transformIntoF[Validation[+*], B].leftMap(_.iterator.mkString("\n")).toEither
+  }
+
+  implicit lazy val validationMailAddress: TransformerF[Validation[+*], String, MailAddress] =
+    string => MailAddress.parseValidated(string).leftMap(_.map(e => TransformationError(e.toString)))
+
+  implicit lazy val encodingMailAddress: Transformer[MailAddress, String] =
+    _.asUnicodeString
+
+  implicit lazy val validationCreateElection
+      : TransformerF[Validation[+*], contract.definitions.CreateElectionRequest, CreateElection] =
+    TransformerF.derive
+
+  implicit lazy val encodingInt: Transformer[Int, BigDecimal] =
+    BigDecimal.int2bigDecimal(_)
+
+  implicit lazy val encodingBallotOption: Transformer[BallotOption, contract.definitions.GetOptionResponse] =
+    Transformer.derive
+
+  implicit lazy val encodingVoterView: Transformer[VoterView, contract.definitions.GetVoterResponse] =
+    Transformer.derive
+
+  implicit lazy val encodingResultView: Transformer[ResultView, contract.definitions.GetResultResponse] =
+    Transformer
+      .define[ResultView, contract.definitions.GetResultResponse]
+      .withFieldComputed(_.ended, _.result.ended)
+      .withFieldComputed(_.positions, _.result.positions.map(_.transformInto[BigDecimal]).toVector)
+      .buildTransformer
 
   implicit lazy val emailDecoder: Decoder[MailAddress] = {
     final case class MailAddressStructure(name: Option[String], address: String)
